add section regular clients

--- a/index.html
+++ b/index.html
@@ -31,8 +31,22 @@
         </nav>
 
         <ul class="cont-nav list">
-          <li class="item-cont"><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-          <li class="item-cont"><a href="tel:+380961111111" class="header-link link">+38 096 111 11 11</a></li>
+          <li class="item-cont">
+            <a href="mailto:info@devstudio.com" class="header-link link item-cont-link">
+              <svg class="icon-cont" width="16" height="12">
+                <use href="./images/icon.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+
+          <li class="item-cont">
+            <a href="tel:+380961111111" class="header-link link item-cont-link">
+            <svg class="icon-cont" width="10" height="16">
+                <use href="./images/icon.svg#icon-smartphone"></use>
+            </svg>
+              +38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -50,6 +64,11 @@
           <ul class="list card-set">
             <li class="card-item soft-item">
               <div class="soft-box">
+                <div class="soft-icon-box">
+                  <svg class="soft-icon" width="70" height="70">
+                    <use href="./images/icon.svg#icon-antenna"></use>
+                  </svg>
+                </div>
                 <h3 class="soft-title">Внимание к деталям</h3>
                 <p class="soft-text">
                   Идейные соображения, а также начало повседневной работы по
@@ -60,6 +79,11 @@
 
             <li class="card-item soft-item">
               <div class="soft-box">
+                <div class="soft-icon-box">
+                  <svg class="soft-icon" width="70" height="70">
+                    <use href="./images/icon.svg#icon-clock"></use>
+                  </svg>
+                </div>                
                 <h3 class="soft-title">Пунктуальность</h3>
                 <p class="soft-text">
                   Задача организации, в особенности же рамки и место обучения кадров
@@ -70,6 +94,11 @@
 
             <li class="card-item soft-item">
               <div class="soft-box">
+                <div class="soft-icon-box">
+                  <svg class="soft-icon" width="70" height="70">
+                    <use href="./images/icon.svg#icon-diagram"></use>
+                  </svg>
+                </div>                 
                 <h3 class="soft-title">Планирование</h3>
                 <p class="soft-text">
                   Равным образом консультация с широким активом в значительной
@@ -80,6 +109,11 @@
             </li>
             <li class="card-item soft-item">
               <div class="soft-box">
+                <div class="soft-icon-box">
+                  <svg class="soft-icon" width="70" height="70">
+                    <use href="./images/icon.svg#icon-astronaut"></use>
+                  </svg>
+                </div>                 
                 <h3 class="soft-title">Современные технологии</h3>
                 <p class="soft-text">
                   Значимость этих проблем настолько очевидна, что реализация
@@ -138,7 +172,45 @@
                   <h3 class="team-name">Игорь Демьяненко</h3>
                   <p class="team-text">Product Designer</p>
                 </div>
+                <div class="social-box">
+
+                  <ul class="social-list social-list-team list">
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
+
               <li class="card-item team-item">
                 <img 
                   src="./images/img2.jpg"
@@ -149,8 +221,45 @@
                 <div class="team-box">
                   <h3 class="team-name">Ольга Репина</h3>
                   <p class="team-text">Frontend Developer</p>
+                </div>
+                <div class="social-box">
+                  <ul class="social-list social-list-team list">
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>               
               </li>
+
               <li class="card-item team-item">
                 <img
                   src="./images/img3.jpg"
@@ -161,8 +270,46 @@
                 <div class="team-box">
                   <h3 class="team-name">Николай Тарасов</h3>
                   <p class="team-text">Marketing</p>
+                </div>
+
+                <div class="social-box">
+                  <ul class="social-list social-list-team list">
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div> 
               </li>
+
               <li class="card-item team-item">
                 <img
                   src="./images/img4.jpg"
@@ -173,36 +320,171 @@
                 <div class="team-box">
                   <h3 class="team-name">Михаил Ермаков</h3>
                   <p class="team-text">UI Designer</p>
+                </div>
+
+                <div class="social-box">
+                  <ul class="social-list social-list-team list">
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link  team-link">
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#" class="social-list-link" team-link>
+                        <svg class="social-list-icon team-icon" width="20" height="20">
+                          <use href="./images/icon.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div> 
               </li>
             </ul>
         </div>
       </section>
+
+      <section class="regular-clients section">
+        <div class="conteiner">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list regular-clients-list">
+            <li class="regular-clients-item">
+                <a href="#" class="regular-clients-link link">
+                  <svg class="regular-clients-icon" width="106" height="60">
+                    <use href="./images/icon.svg#icon-first-company"></use>
+                  </svg>
+                </a>
+            </li>
+
+            <li class="regular-clients-item">
+                <a href="#" class="regular-clients-link link">
+                  <svg class="regular-clients-icon" width="106" height="60">
+                    <use href="./images/icon.svg#icon-second-company"></use>
+                  </svg>
+                </a>              
+            </li>
+
+            <li class="regular-clients-item">
+                <a href="#" class="regular-clients-link link">
+                  <svg class="regular-clients-icon" width="106" height="60">
+                    <use href="./images/icon.svg#icon-third-company"></use>
+                  </svg>
+                </a>              
+            </li>
+
+            <li class="regular-clients-item">
+                <a href="#" class="regular-clients-link link">
+                  <svg class="regular-clients-icon" width="106" height="60">
+                    <use href="./images/icon.svg#icon-fourth-company"></use>
+                  </svg>
+                </a>              
+            </li>
+
+            <li class="regular-clients-item">
+                <a href="#" class="regular-clients-link link">
+                  <svg class="regular-clients-icon" width="106" height="60">
+                    <use href="./images/icon.svg#icon-fifth-company"></use>
+                  </svg>
+                </a>              
+            </li>
+
+            <li class="regular-clients-item">
+                <a href="#" class="regular-clients-link link">
+                  <svg class="regular-clients-icon" width="106" height="60">
+                    <use href="./images/icon.svg#icon-sixth-company"></use>
+                  </svg>
+                </a>              
+            </li>
+          </ul>          
+        </div>
+
+      </section>
     </main>
 
     <footer class="section-foot">
       <div class="conteiner">
-          <a href="#" class="link logo logo-foot">Web<span class="part-logo">Studio</span></a>
-        <address class="address-part">
-          <ul class="list address">
-            <li class="location item">
-              <a
-                href="https://goo.gl/maps/QADRwJ1tuv91Vput9"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                class="link address-link"
-                >г. Киев, пр-т Леси Украинки, 26
-              </a>
-            </li>
-            <li class="mail item">
-              <a href="mailto:info@example.com" class="link address-link">info@example.com</a>
-            </li>
-            <li class="item"> 
-              <a href="tel:+380991111111" class="link address-link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>  
+        <ul class="list footer-list">
+          <li class="footer-item">
+            <a href="#" class="link logo logo-foot">Web<span class="part-logo">Studio</span></a>
+            <address class="address-part">
+              <ul class="list address">
+                <li class="location item">
+                  <a
+                    href="https://goo.gl/maps/QADRwJ1tuv91Vput9"
+                    target="_blank"
+                    rel="noopener nofollow noreferrer"
+                    class="link address-link"
+                    >г. Киев, пр-т Леси Украинки, 26
+                  </a>
+                </li>
+                <li class="mail item">
+                  <a href="mailto:info@example.com" class="link address-link">info@example.com</a>
+                </li>
+                <li class="item"> 
+                  <a href="tel:+380991111111" class="link address-link">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </li>
+
+          <li class="footer-item">
+            <h3 class="social-title">присоединяйтесь</h3>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+          </li>
+        </ul>
+      </div>   
     </footer>
   </body>
 </html>
