--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <nav>
           <ul class="site-nav list">
             <li class="item-nav">
-              <a href="./index.html" class="link header-link ">Студия</a>
+              <a href="./index.html" class="link header-link">Студия</a>
             </li>
             <li class="item-nav">
               <a href="#" class="header-link link current">Портфолио</a>
@@ -31,8 +31,22 @@
         </nav>
 
         <ul class="cont-nav list">
-          <li class="item-cont"><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-          <li class="item-cont"><a href="tel:+380961111111" class="header-link link">+38 096 111 11 11</a></li>
+          <li class="item-cont">
+            <a href="mailto:info@devstudio.com" class="header-link link item-cont-link">
+              <svg class="icon-cont" width="16" height="12">
+                <use href="./images/icon.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+
+          <li class="item-cont">
+            <a href="tel:+380961111111" class="header-link link item-cont-link">
+            <svg class="icon-cont" width="10" height="16">
+                <use href="./images/icon.svg#icon-smartphone"></use>
+            </svg>
+              +38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -192,27 +206,69 @@
 
     <footer class="section-foot">
       <div class="conteiner">
-          <a href="#" class="link logo logo-foot">Web<span class="part-logo">Studio</span></a>
-        <address class="address-part">
-          <ul class="list address">
-            <li class="location item">
-              <a
-                href="https://goo.gl/maps/QADRwJ1tuv91Vput9"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                class="link address-link"
-                >г. Киев, пр-т Леси Украинки, 26
-              </a>
-            </li>
-            <li class="mail item">
-              <a href="mailto:info@example.com" class="link address-link">info@example.com</a>
-            </li>
-            <li class="item"> 
-              <a href="tel:+380991111111" class="link address-link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>  
+        <ul class="list footer-list">
+          <li class="footer-item">
+            <a href="#" class="link logo logo-foot">Web<span class="part-logo">Studio</span></a>
+            <address class="address-part">
+              <ul class="list address">
+                <li class="location item">
+                  <a
+                    href="https://goo.gl/maps/QADRwJ1tuv91Vput9"
+                    target="_blank"
+                    rel="noopener nofollow noreferrer"
+                    class="link address-link"
+                    >г. Киев, пр-т Леси Украинки, 26
+                  </a>
+                </li>
+                <li class="mail item">
+                  <a href="mailto:info@example.com" class="link address-link">info@example.com</a>
+                </li>
+                <li class="item"> 
+                  <a href="tel:+380991111111" class="link address-link">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </li>
+
+          <li class="footer-item">
+            <h3 class="social-title">присоединяйтесь</h3>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-item">
+                  <a href="#" class="social-list-link celler-link">
+                    <svg class="social-list-icon celler-icon" width="20" height="20">
+                      <use href="./images/icon.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+          </li>
+        </ul>
+      </div>   
     </footer>
   </body>
 </html>
