--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      </a>
                     </li>
 
                     <li>
@@ -237,7 +236,6 @@
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
-                      </a>
                       </a>
                     </li>
 
@@ -288,7 +286,6 @@
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      </a>
                     </li>
 
                     <li>
@@ -338,7 +335,6 @@
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      </a>
                     </li>
 
                     <li>
@@ -350,7 +346,7 @@
                     </li>
 
                     <li>
-                      <a href="#" class="social-list-link" team-link>
+                      <a href="#" class="social-list-link  team-link">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
@@ -462,7 +458,6 @@
                     <svg class="social-list-icon celler-icon" width="20" height="20">
                       <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
-                  </a>
                   </a>
                 </li>
 
