fix some errors

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <ul class="cont-nav list">
           <li class="item-cont">
-            <a href="mailto:info@devstudio.com" class="header-link link item-cont-link">
+            <a href="mailto:info@devstudio.com" class="header-link link item-cont-link" target="_blank" rel="noopener nofollow noreferrer">
               <svg class="icon-cont" width="16" height="12">
                 <use href="./images/icon.svg#icon-envelope"></use>
               </svg>
@@ -63,7 +63,6 @@
         <div class="conteiner">
           <ul class="list card-set">
             <li class="card-item soft-item">
-              <div class="soft-box">
                 <div class="soft-icon-box">
                   <svg class="soft-icon" width="70" height="70">
                     <use href="./images/icon.svg#icon-antenna"></use>
@@ -74,11 +73,9 @@
                   Идейные соображения, а также начало повседневной работы по
                   формированию позиции.
                 </p>
-              </div>
             </li>
 
             <li class="card-item soft-item">
-              <div class="soft-box">
                 <div class="soft-icon-box">
                   <svg class="soft-icon" width="70" height="70">
                     <use href="./images/icon.svg#icon-clock"></use>
@@ -89,11 +86,9 @@
                   Задача организации, в особенности же рамки и место обучения кадров
                   влечет за собой.
                 </p>                
-              </div>
             </li>
 
             <li class="card-item soft-item">
-              <div class="soft-box">
                 <div class="soft-icon-box">
                   <svg class="soft-icon" width="70" height="70">
                     <use href="./images/icon.svg#icon-diagram"></use>
@@ -104,11 +99,9 @@
                   Равным образом консультация с широким активом в значительной
                   степени обуславливает.
                 </p>                
-              </div>
-
             </li>
+
             <li class="card-item soft-item">
-              <div class="soft-box">
                 <div class="soft-icon-box">
                   <svg class="soft-icon" width="70" height="70">
                     <use href="./images/icon.svg#icon-astronaut"></use>
@@ -119,7 +112,6 @@
                   Значимость этих проблем настолько очевидна, что реализация
                   плановых заданий.
                 </p>                
-              </div>
             </li>
           </ul>
         </div>
@@ -171,36 +163,33 @@
                 <div class="team-box">
                   <h3 class="team-name">Игорь Демьяненко</h3>
                   <p class="team-text">Product Designer</p>
-                </div>
-                <div class="social-box">
-
-                  <ul class="social-list social-list-team list">
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                  <ul class="social-list list">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
@@ -220,35 +209,33 @@
                 <div class="team-box">
                   <h3 class="team-name">Ольга Репина</h3>
                   <p class="team-text">Frontend Developer</p>
-                </div>
-                <div class="social-box">
-                  <ul class="social-list social-list-team list">
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                  <ul class="social-list list">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
@@ -268,36 +255,33 @@
                 <div class="team-box">
                   <h3 class="team-name">Николай Тарасов</h3>
                   <p class="team-text">Marketing</p>
-                </div>
-
-                <div class="social-box">
-                  <ul class="social-list social-list-team list">
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                  <ul class="social-list list">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
@@ -314,39 +298,37 @@
                   width="270"
                   height="260"
                 />
+
                 <div class="team-box">
                   <h3 class="team-name">Михаил Ермаков</h3>
                   <p class="team-text">UI Designer</p>
-                </div>
-
-                <div class="social-box">
-                  <ul class="social-list social-list-team list">
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                  <ul class="social-list list">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link  team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link  team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
 
-                    <li>
-                      <a href="#" class="social-list-link  team-link">
+                    <li class="social-item">
+                      <a href="#" class="social-list-link  team-link" target="_blank" rel="noopener nofollow noreferrer">
                         <svg class="social-list-icon team-icon" width="20" height="20">
                           <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
@@ -362,49 +344,49 @@
       <section class="regular-clients section">
         <div class="conteiner">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="list regular-clients-list">
-            <li class="regular-clients-item">
-                <a href="#" class="regular-clients-link link">
+          <ul class="list card-set">
+            <li class="regular-clients-item card-item">
+                <a href="#" class="regular-clients-link link" target="_blank" rel="noopener nofollow noreferrer">
                   <svg class="regular-clients-icon" width="106" height="60">
                     <use href="./images/icon.svg#icon-first-company"></use>
                   </svg>
                 </a>
             </li>
 
-            <li class="regular-clients-item">
-                <a href="#" class="regular-clients-link link">
+            <li class="regular-clients-item card-item">
+                <a href="#" class="regular-clients-link link" target="_blank" rel="noopener nofollow noreferrer">
                   <svg class="regular-clients-icon" width="106" height="60">
                     <use href="./images/icon.svg#icon-second-company"></use>
                   </svg>
                 </a>              
             </li>
 
-            <li class="regular-clients-item">
-                <a href="#" class="regular-clients-link link">
+            <li class="regular-clients-item card-item">
+                <a href="#" class="regular-clients-link link" target="_blank" rel="noopener nofollow noreferrer">
                   <svg class="regular-clients-icon" width="106" height="60">
                     <use href="./images/icon.svg#icon-third-company"></use>
                   </svg>
                 </a>              
             </li>
 
-            <li class="regular-clients-item">
-                <a href="#" class="regular-clients-link link">
+            <li class="regular-clients-item card-item">
+                <a href="#" class="regular-clients-link link" target="_blank" rel="noopener nofollow noreferrer">
                   <svg class="regular-clients-icon" width="106" height="60">
                     <use href="./images/icon.svg#icon-fourth-company"></use>
                   </svg>
                 </a>              
             </li>
 
-            <li class="regular-clients-item">
-                <a href="#" class="regular-clients-link link">
+            <li class="regular-clients-item card-item">
+                <a href="#" class="regular-clients-link link" target="_blank" rel="noopener nofollow noreferrer">
                   <svg class="regular-clients-icon" width="106" height="60">
                     <use href="./images/icon.svg#icon-fifth-company"></use>
                   </svg>
                 </a>              
             </li>
 
-            <li class="regular-clients-item">
-                <a href="#" class="regular-clients-link link">
+            <li class="regular-clients-item card-item">
+                <a href="#" class="regular-clients-link link" target="_blank" rel="noopener nofollow noreferrer">
                   <svg class="regular-clients-icon" width="106" height="60">
                     <use href="./images/icon.svg#icon-sixth-company"></use>
                   </svg>
@@ -446,7 +428,7 @@
             <h3 class="social-title">присоединяйтесь</h3>
               <ul class="social-list list">
                 <li class="social-item">
-                  <a href="#" class="social-list-link celler-link">
+                  <a href="#" class="social-list-link celler-link" target="_blank" rel="noopener nofollow noreferrer">
                     <svg class="social-list-icon celler-icon" width="20" height="20">
                       <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
@@ -454,7 +436,7 @@
                 </li>
 
                 <li class="social-item">
-                  <a href="#" class="social-list-link celler-link">
+                  <a href="#" class="social-list-link celler-link" target="_blank" rel="noopener nofollow noreferrer">
                     <svg class="social-list-icon celler-icon" width="20" height="20">
                       <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
@@ -462,7 +444,7 @@
                 </li>
 
                 <li class="social-item">
-                  <a href="#" class="social-list-link celler-link">
+                  <a href="#" class="social-list-link celler-link" target="_blank" rel="noopener nofollow noreferrer">
                     <svg class="social-list-icon celler-icon" width="20" height="20">
                       <use href="./images/icon.svg#icon-facebook"></use>
                     </svg>
@@ -470,7 +452,7 @@
                 </li>
 
                 <li class="social-item">
-                  <a href="#" class="social-list-link celler-link">
+                  <a href="#" class="social-list-link celler-link" target="_blank" rel="noopener nofollow noreferrer">
                     <svg class="social-list-icon celler-icon" width="20" height="20">
                       <use href="./images/icon.svg#icon-linkedin"></use>
                     </svg>
