--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 
           <ul class="list card-set">
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-1.jpg" 
@@ -80,7 +80,7 @@
             </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-2.jpg" 
@@ -95,7 +95,7 @@
             </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-3.jpg" 
@@ -111,7 +111,7 @@
             </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-4.jpg" 
@@ -126,7 +126,7 @@
             </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-5.jpg" 
@@ -141,7 +141,7 @@
             </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-6.jpg" 
@@ -156,7 +156,7 @@
             </li>
 
           <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-7.jpg" 
@@ -171,7 +171,7 @@
           </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-8.jpg" 
@@ -186,7 +186,7 @@
             </li>
 
             <li class="card-item project-item">
-              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link">
+              <a href="#" target="_blank" rel="noopener nofollow noreferrer" class="link project-link">
                 <img
                 class="inbox" 
                 src="./images/box-2-9.jpg" 
